# WeeChat

./: .gitignore  .gitignore.swp  .gitmodules  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  compile_commands.json  config.status  configure.ac
data/: Makefile  Makefile.am  ui.glade  ui.glade~
data/css/: ChatTitleWidget.css  ChatWidget.css  WeeChat.css
m4/: ax_boost_base.m4  ax_boost_filesystem.m4  ax_boost_system.m4
src/: .ChatTitleWidget.cc.swo  ChatTitleWidget.cc  ChatTitleWidget.h  ChatWidget.cc  ChatWidget.h  Configuration.cc  Configuration.h  ConsolePrinter.cc  ConsolePrinter.h  Makefile  Makefile.am  WeeChat  WeeChat.cc
